welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:36: error: ';' expected but 'else' found.
			else if(getDirection() == Direction.OUEST)
                        ^